removed sign-up

--- a/about.html
+++ b/about.html
@@ -45,12 +45,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
                     <a class="navbar-brand" href="index.html">
                         <strong><span>MG</span> Fitness</strong>
-                    </a>
-
-                    <div class="d-lg-none">
-                        <a href="sign-in.html" class="bi-person custom-icon me-3"></a>
-
-                        <a href="product-detail.html" class="bi-bag custom-icon"></a>
+                    </a><div class="d-lg-none">
                     </div>
 
                     <div class="collapse navbar-collapse" id="navbarNav">
